--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,9 @@ if(CMAKE_Fortran_COMPILER_ID STREQUAL GNU)
   endif()
 elseif(CMAKE_Fortran_COMPILER_ID STREQUAL Intel)
   add_compile_options(-warn declarations,general,usage,interfaces,unused)
-  add_compile_options(-standard-semantics)
+  if(NOT CMAKE_Fortran_COMPILER_VERSION VERSION_EQUAL 20.2.1.20200827)
+    add_compile_options(-standard-semantics)
+  endif()
   if(CMAKE_Fortran_COMPILER_VERSION VERSION_LESS 18.0)
     add_compile_options(-stand f15)
   else()
@@ -35,7 +37,7 @@ endif()
 # --- compiler feature checks
 include(CheckFortranSourceCompiles)
 include(CheckFortranSourceRuns)
-check_fortran_source_compiles("error stop i; end" f18errorstop SRC_EXT f90)
+check_fortran_source_runs("i=0; error stop i; end" f18errorstop SRC_EXT f90)
 check_fortran_source_compiles("real, allocatable :: array(:, :, :, :, :, :, :, :, :, :); end" f03rank SRC_EXT f90)
 check_fortran_source_runs("use, intrinsic :: iso_fortran_env, only : real128; real(real128) :: x; x = x+1; end" f03real128)
 
