--- a/src/Makefile.manual
+++ b/src/Makefile.manual
@@ -1,5 +1,8 @@
 SRC = f18estop.f90 \
       stdlib_ascii.f90 \
+      stdlib_bitsets.f90 \
+      stdlib_bitsets_64.f90 \
+      stdlib_bitsets_large.f90 \
       stdlib_error.f90 \
       stdlib_io.f90 \
       stdlib_kinds.f90 \
@@ -12,10 +15,7 @@ SRC = f18estop.f90 \
       stdlib_stats.f90 \
       stdlib_stats_mean.f90 \
       stdlib_stats_moment.f90 \
-      stdlib_stats_var.f90 \
-      stdlib_stats_distribution.f90 \
-      stdlib_stats_distribution_rvs.f90 \
-      stdlib_stats_distribution_implementation.f90 \ 
+      stdlib_stats_var.f90
 
 LIB = libstdlib.a
 
@@ -43,6 +43,9 @@ clean:
 
 # Fortran module dependencies
 f18estop.o: stdlib_error.o
+stdlib_bitsets.o: stdlib_kinds.o
+stdlib_bitsets_64.o: stdlib_bitsets.o
+stdlib_bitsets_large.o: stdlib_bitsets.o
 stdlib_error.o: stdlib_optval.o
 stdlib_io.o: \
 	stdlib_error.o \
@@ -64,14 +67,11 @@ stdlib_stats_var.o: \
 	stdlib_optval.o \
 	stdlib_kinds.o \
 	stdlib_stats.o
-stdlib_stats_distribution_rvs.o: stdlib_kinds.o
-stdlib_stats_distribution.o: \
-    stdlib_error.o \
-	stdlib_kinds.o \
-	stdlib_stats_distribution_rvs.o \
-stdlib_stats_distribution_imp.o: \
-    stdlib_stats_distribution.o
+
 # Fortran sources that are built from fypp templates
+stdlib_bitsets_64.f90: stdlib_bitsets_64.fypp
+stdlib_bitsets_large.f90: stdlib_bitsets_large.fypp
+stdlib_bitsets.f90: stdlib_bitsets.fypp
 stdlib_io.f90: stdlib_io.fypp
 stdlib_linalg.f90: stdlib_linalg.fypp
 stdlib_linalg_diag.f90: stdlib_linalg_diag.fypp
@@ -80,7 +80,3 @@ stdlib_stats.f90: stdlib_stats.fypp
 stdlib_stats_mean.f90: stdlib_stats_mean.fypp
 stdlib_stats_moment.f90: stdlib_stats_moment.fypp
 stdlib_stats_var.f90: stdlib_stats_var.fypp
-stdlib_stats_distribution_rvs.f90: stdlib_stats_distribution_rvs.fypp
-stdlib_stats_distribution.f90: stdlib_stats_distribution.fypp
-stdlib_stats_distribution_implementation.f90: \
-    stdlib_stats_distribution_implementation.fypp
