--- a/src/Makefile.manual
+++ b/src/Makefile.manual
@@ -76,12 +76,12 @@ stdlib_stats_distribution_uniform.o: \
 	stdlib_kinds.o \
 	stdlib_error.o \
 	stdlib_stats_distribution_PRNG.o
-stdlib_stats_distribution_normal.o \
+stdlib_stats_distribution_normal.o: \
 	stdlib_kinds.o \
 	stdlib_error.o \
 	stdlib_stats_distribution.PRNG.o \
 	stdlib_stats_distribution.uniform.o
-stdlib_stats_distribution_exponential.o \
+stdlib_stats_distribution_exponential.o: \
 	stdlib_kinds.o \
 	stdlib_error.o \
 	stdlib_stats_distribtuion_PRNG.o \
