--- a/src/Makefile.manual
+++ b/src/Makefile.manual
@@ -75,7 +75,7 @@ stdlib_stats_distribution_uniform.o: \
 	stdlib_kinds.o \
 	stdlib_error.o \
 	stdlib_stats_distribution_PRNG.o
-stdlib_stats_distribution_normal.o \
+stdlib_stats_distribution_normal.o: \
 	stdlib_kinds.o \
 	stdlib_error.o \
 	stdlib_stats_distribution.PRNG.o \
