--- a/src/Makefile.manual
+++ b/src/Makefile.manual
@@ -79,8 +79,8 @@ stdlib_stats_distribution_uniform.o: \
 stdlib_stats_distribution_normal.o: \
 	stdlib_kinds.o \
 	stdlib_error.o \
-	stdlib_stats_distribution.PRNG.o \
-	stdlib_stats_distribution.uniform.o
+	stdlib_stats_distribution_PRNG.o \
+	stdlib_stats_distribution_uniform.o
 stdlib_stats_distribution_exponential.o: \
 	stdlib_kinds.o \
 	stdlib_error.o \
