--- a/src/Makefile.manual
+++ b/src/Makefile.manual
@@ -80,17 +80,17 @@ stdlib_stats_distribution_uniform.o: \
 stdlib_stats_distribution_normal.o: \
     	stdlib_kinds.o \
 	stdlib_error.o \
-	stdlib_stats_distribution.PRNG.o \
-	stdlib_stats_distribution.uniform.o
+	stdlib_stats_distribution_PRNG.o \
+	stdlib_stats_distribution_uniform.o
 stdlib_stats_distribution_special.o: \
 	stdlib_kinds.o \
 	stdlib_error.o
 stdlib_stats_distribution_gamma.o: \
 	stdlib_kinds.o \
 	stdlib_error.o \
-	stdlib_stats_distribution.uniform.o \
-	stdlib_stats_distribution.normal.o \
-	stdlib_stats_distribution.special.o
+	stdlib_stats_distribution_uniform.o \
+	stdlib_stats_distribution_normal.o \
+	stdlib_stats_distribution_special.o
 	
 # Fortran sources that are built from fypp templates
 stdlib_bitsets_64.f90: stdlib_bitsets_64.fypp
