--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -15,6 +15,7 @@ set(fppFiles
     stdlib_stats_mean.fypp
     stdlib_stats_moment.fypp
     stdlib_stats_moment_all.fypp
+    stdlib_stats_moment_mask.fypp
     stdlib_stats_moment_scalar.fypp
     stdlib_stats_var.fypp
     stdlib_quadrature.fypp
