Export stdlib targets for dependent projects

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,6 @@
 cmake_minimum_required(VERSION 3.14.0)
 project(stdlib Fortran)
 enable_testing()
-get_directory_property(IS_SUBPROJECT PARENT_DIRECTORY)
 
 include(${PROJECT_SOURCE_DIR}/cmake/stdlib.cmake)
 
@@ -53,3 +52,8 @@ if(NOT FYPP)
 endif()
 
 add_subdirectory(src)
+
+install(EXPORT fortran_stdlib-targets
+        NAMESPACE fortran_stdlib::
+        DESTINATION "lib/cmake/fortran_stdlib"
+)
