--- a/src/Makefile.manual
+++ b/src/Makefile.manual
@@ -1,4 +1,4 @@
-noSRC = f18estop.f90 \
+SRC = f18estop.f90 \
       stdlib_ascii.f90 \
       stdlib_bitsets.f90 \
       stdlib_bitsets_64.f90 \
@@ -18,7 +18,10 @@ noSRC = f18estop.f90 \
       stdlib_stats_var.f90 \
       stdlib_stats_distribution_PRNG.f90 \
       stdlib_stats_distribution_uniform.f90 \
-	  stdlib_stats_distribution_normal.f90
+      stdlib_stats_distribution_normal.f90 \
+      stdlib_stats_distribution_special.f90 \
+      stdlib_stats_distribution_gamma.f90 \
+      stdlib_stats_distribution_beta.f90
 	  
 LIB = libstdlib.a
 
@@ -72,15 +75,30 @@ stdlib_stats_var.o: \
 	stdlib_stats.o
 stdlib_stats_distribution_PRNG.o: stdlib_kinds.o
 stdlib_stats_distribution_uniform.o: \
-    stdlib_kinds.o \
+    	stdlib_kinds.o \
 	stdlib_error.o \
 	stdlib_stats_distribution_PRNG.o
 stdlib_stats_distribution_normal.o: \
-    stdlib_kinds.o \
+    	stdlib_kinds.o \
 	stdlib_error.o \
-	stdlib_stats_distribution.PRNG.o \
-	stdlib_stats_distribution.uniform.o
-
+	stdlib_stats_distribution_PRNG.o \
+	stdlib_stats_distribution_uniform.o
+stdlib_stats_distribution_special.o: \
+	stdlib_kinds.o \
+	stdlib_error.o
+stdlib_stats_distribution_gamma.o: \
+	stdlib_kinds.o \
+	stdlib_error.o \
+	stdlib_stats_distribution_uniform.o \
+	stdlib_stats_distribution_normal.o \
+	stdlib_stats_distribution_special.o
+stdlib_stats_distribution_beta.o: \
+	stdlib_kinds.o \
+	stdlib_error.o \
+	stdlib_stats_distribution_uniform.o \
+	stdlib_stats_distribution_gamma.o \
+	stdlib_stats_distribution_special.o
+	
 # Fortran sources that are built from fypp templates
 stdlib_bitsets_64.f90: stdlib_bitsets_64.fypp
 stdlib_bitsets_large.f90: stdlib_bitsets_large.fypp
@@ -96,3 +114,6 @@ stdlib_stats_var.f90: stdlib_stats_var.fypp
 stdlib_stats_distribution_PRNG.f90: stdlib_stats_distribution_PRNG.fypp
 stdlib_stats_distribution_uniform.f90: stdlib_stats_distribution_uniform.fypp
 stdlib_stats_distribution_normal.f90: stdlib_stats_distribution_normal.fypp
+stdlib_stats_distribution_special.f90: stdlib_stats_distribution_special.fypp
+stdlib_stats_distribution_gamma.f90: stdlib_stats_distribution_gamma.fypp
+stdlib_stats_distribution_beta.f90: stdlib_stats_distribution_beta.fypp
