--- a/src/Makefile.manual
+++ b/src/Makefile.manual
@@ -14,6 +14,7 @@ SRC = f18estop.f90 \
       stdlib_quadrature_trapz.f90 \
       stdlib_stats.f90 \
       stdlib_stats_mean.f90 \
+      stdlib_stats_moment.f90 \
       stdlib_stats_moment_all.f90 \
       stdlib_stats_moment_mask.f90 \
       stdlib_stats_moment_scalar.f90 \
