--- a/src/Makefile.manual
+++ b/src/Makefile.manual
@@ -18,8 +18,7 @@ SRC = f18estop.f90 \
       stdlib_stats_moment_all.f90 \
       stdlib_stats_moment_mask.f90 \
       stdlib_stats_moment_scalar.f90 \
-      stdlib_stats_var.f90 \
-      stdlib_stats_distribution_PRNG.f90
+      stdlib_stats_var.f90
 
 LIB = libstdlib.a
 
@@ -71,7 +70,6 @@ stdlib_stats_var.o: \
 	stdlib_optval.o \
 	stdlib_kinds.o \
 	stdlib_stats.o
-stdlib_stats_distribution_PRNG.o: stdlib_kinds.o stdlib_error.o
 
 # Fortran sources that are built from fypp templates
 stdlib_bitsets_64.f90: stdlib_bitsets_64.fypp
@@ -88,4 +86,3 @@ stdlib_stats_moment_all.f90: stdlib_stats_moment_all.fypp
 stdlib_stats_moment_mask.f90: stdlib_stats_moment_mask.fypp
 stdlib_stats_moment_scalar.f90: stdlib_stats_moment_scalar.fypp
 stdlib_stats_var.f90: stdlib_stats_var.fypp
-stdlib_stats_distribution_PRNG.f90: stdlib_stats_distribution.PRNG.fypp
