--- a/src/Makefile.manual
+++ b/src/Makefile.manual
@@ -18,9 +18,7 @@ SRC = f18estop.f90 \
       stdlib_stats_moment_all.f90 \
       stdlib_stats_moment_mask.f90 \
       stdlib_stats_moment_scalar.f90 \
-      stdlib_stats_var.f90 \
-#      stdlib_stats_distribution_PRNG.f90\
-#      stdlib_stats_distribution_uniform.f90
+      stdlib_stats_var.f90
 	  
 LIB = libstdlib.a
 
@@ -72,11 +70,6 @@ stdlib_stats_var.o: \
 	stdlib_optval.o \
 	stdlib_kinds.o \
 	stdlib_stats.o
-# stdlib_stats_distribution_PRNG.o: stdlib_kinds.o
-# stdlib_stats_distribution_uniform.o: \
-#    stdlib_kinds.o \
-#	stdlib_error.o \
-#	stdlib_stats_distribution_PRNG.o
 
 # Fortran sources that are built from fypp templates
 stdlib_bitsets_64.f90: stdlib_bitsets_64.fypp
@@ -90,5 +83,3 @@ stdlib_stats.f90: stdlib_stats.fypp
 stdlib_stats_mean.f90: stdlib_stats_mean.fypp
 stdlib_stats_moment.f90: stdlib_stats_moment.fypp
 stdlib_stats_var.f90: stdlib_stats_var.fypp
-#stdlib_stats_distribution_PRNG.f90: stdlib_stats_distribution_PRNG.fypp
-#stdlib_stats_distribution_uniform.f90: stdlib_stats_distribution_uniform.fypp
