--- a/src/Makefile.manual
+++ b/src/Makefile.manual
@@ -18,10 +18,7 @@ SRC = f18estop.f90 \
       stdlib_stats_moment_all.f90 \
       stdlib_stats_moment_mask.f90 \
       stdlib_stats_moment_scalar.f90 \
-      stdlib_stats_var.f90 \
-      stdlib_stats_distribution_PRNG.f90 \
-      stdlib_stats_distribution_uniform.f90 \
-      stdlib_stats_distribution_exponential.f90
+      stdlib_stats_var.f90
 	  
 LIB = libstdlib.a
 
@@ -73,16 +70,6 @@ stdlib_stats_var.o: \
 	stdlib_optval.o \
 	stdlib_kinds.o \
 	stdlib_stats.o
-stdlib_stats_distribution_PRNG.o: stdlib_kinds.o
-stdlib_stats_distribution_uniform.o: \
-	stdlib_kinds.o \
-	stdlib_error.o \
-	stdlib_stats_distribution_PRNG.o
-stdlib_stats_distribution_exponential.o: \
-	stdlib_kinds.o \
-	stdlib_error.o \
-	stdlib_stats_distribution_PRNG.o \
-	stdlib_stats_distribution_uniform.o
 	
 # Fortran sources that are built from fypp templates
 stdlib_bitsets_64.f90: stdlib_bitsets_64.fypp
@@ -96,6 +83,3 @@ stdlib_stats.f90: stdlib_stats.fypp
 stdlib_stats_mean.f90: stdlib_stats_mean.fypp
 stdlib_stats_moment.f90: stdlib_stats_moment.fypp
 stdlib_stats_var.f90: stdlib_stats_var.fypp
-stdlib_stats_distribution_PRNG.f90: stdlib_stats_distribution_PRNG.fypp
-stdlib_stats_distribution_uniform.f90: stdlib_stats_distribution_uniform.fypp
-stdlib_stats_distribution_exponential.f90: stdlib_stats_distribution_exponential.fypp
