--- a/src/Makefile.manual
+++ b/src/Makefile.manual
@@ -18,7 +18,13 @@ SRC = f18estop.f90 \
       stdlib_stats_moment_all.f90 \
       stdlib_stats_moment_mask.f90 \
       stdlib_stats_moment_scalar.f90 \
-      stdlib_stats_var.f90
+      stdlib_stats_var.f90 \
+      stdlib_stats_distribution_PRNG.f90 \
+      stdlib_stats_distribution_uniform.f90 \
+      stdlib_stats_distribution_normal.f90 \
+      stdlib_stats_distribution_special.f90 \
+      stdlib_stats_distribution_gamma.f90 \
+      stdlib_stats_distribution_beta.f90
 
 LIB = libstdlib.a
 
@@ -70,6 +76,31 @@ stdlib_stats_var.o: \
 	stdlib_optval.o \
 	stdlib_kinds.o \
 	stdlib_stats.o
+stdlib_stats_distribution_PRNG.o: stdlib_kinds.o
+stdlib_stats_distribution_uniform.o: \
+    	stdlib_kinds.o \
+	stdlib_error.o \
+	stdlib_stats_distribution_PRNG.o
+stdlib_stats_distribution_normal.o: \
+    	stdlib_kinds.o \
+	stdlib_error.o \
+	stdlib_stats_distribution_PRNG.o \
+	stdlib_stats_distribution_uniform.o
+stdlib_stats_distribution_special.o: \
+	stdlib_kinds.o \
+	stdlib_error.o
+stdlib_stats_distribution_gamma.o: \
+	stdlib_kinds.o \
+	stdlib_error.o \
+	stdlib_stats_distribution_uniform.o \
+	stdlib_stats_distribution_normal.o \
+	stdlib_stats_distribution_special.o
+stdlib_stats_distribution_beta.o: \
+	stdlib_kinds.o \
+	stdlib_error.o \
+	stdlib_stats_distribution_uniform.o \
+	stdlib_stats_distribution_gamma.o \
+	stdlib_stats_distribution_special.o
 
 # Fortran sources that are built from fypp templates
 stdlib_bitsets_64.f90: stdlib_bitsets_64.fypp
@@ -86,3 +117,9 @@ stdlib_stats_moment_all.f90: stdlib_stats_moment_all.fypp
 stdlib_stats_moment_mask.f90: stdlib_stats_moment_mask.fypp
 stdlib_stats_moment_scalar.f90: stdlib_stats_moment_scalar.fypp
 stdlib_stats_var.f90: stdlib_stats_var.fypp
+stdlib_stats_distribution_PRNG.f90: stdlib_stats_distribution_PRNG.fypp
+stdlib_stats_distribution_uniform.f90: stdlib_stats_distribution_uniform.fypp
+stdlib_stats_distribution_normal.f90: stdlib_stats_distribution_normal.fypp
+stdlib_stats_distribution_special.f90: stdlib_stats_distribution_special.fypp
+stdlib_stats_distribution_gamma.f90: stdlib_stats_distribution_gamma.fypp
+stdlib_stats_distribution_beta.f90: stdlib_stats_distribution_beta.fypp
