--- a/src/Makefile.manual
+++ b/src/Makefile.manual
@@ -72,7 +72,7 @@ stdlib_stats_var.o: \
 	stdlib_optval.o \
 	stdlib_kinds.o \
 	stdlib_stats.o
-stdlib_stats_distribution_PRNG.o: stdlib_kinds.o stdlib_error.o
+stdlib_stats_distribution_PRNG.o: stdlib_kinds.o
 stdlib_stats_distribution.uniform.o: \
 	stdlib_kinds.o \
 	stdlib_error.o \
