Fix subproject build (#284)
- export stdlib targets for dependent projects

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.14.0)
 project(stdlib Fortran)
 enable_testing()
 
-include(${CMAKE_SOURCE_DIR}/cmake/stdlib.cmake)
+include(${PROJECT_SOURCE_DIR}/cmake/stdlib.cmake)
 
 # --- compiler options
 if(CMAKE_Fortran_COMPILER_ID STREQUAL GNU)
@@ -52,3 +52,8 @@ if(NOT FYPP)
 endif()
 
 add_subdirectory(src)
+
+install(EXPORT fortran_stdlib-targets
+        NAMESPACE fortran_stdlib::
+        DESTINATION "lib/cmake/fortran_stdlib"
+)
