--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -64,8 +64,8 @@ add_subdirectory(tests)
 
 install(TARGETS fortran_stdlib
         EXPORT fortran_stdlib-targets
-        RUNTIME DESTINATION bin
-        ARCHIVE DESTINATION lib
-        LIBRARY DESTINATION lib
+        RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}"
+        ARCHIVE DESTINATION "${CMAKE_INSTALL_LIBDIR}"
+        LIBRARY DESTINATION "${CMAKE_INSTALL_LIBDIR}"
 )
-install(DIRECTORY ${LIB_MOD_DIR} DESTINATION include)
+install(DIRECTORY ${LIB_MOD_DIR} DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}")
