--- a/src/Makefile.manual
+++ b/src/Makefile.manual
@@ -71,7 +71,7 @@ stdlib_stats_var.o: \
 	stdlib_optval.o \
 	stdlib_kinds.o \
 	stdlib_stats.o
-stdlib_stats_distribution_PRNG.o: stdlib_kinds.o
+stdlib_stats_distribution_PRNG.o: stdlib_kinds.o stdlib_error.o
 
 # Fortran sources that are built from fypp templates
 stdlib_bitsets_64.f90: stdlib_bitsets_64.fypp
