--- a/src/Makefile.manual
+++ b/src/Makefile.manual
@@ -60,9 +60,11 @@ stdlib_linalg_diag.o: \
 stdlib_logger.o: stdlib_ascii.o stdlib_optval.o
 stdlib_optval.o: stdlib_kinds.o
 stdlib_quadrature.o: stdlib_kinds.o
-stdlib_quadrature_trapzd.o: \
-	stdlib_error.o \
+stdlib_quadrature_trapz.o: \
 	stdlib_quadrature.o \
+	stdlib_error.o \
+	stdlib_kinds.o
+stdlib_stats.o: \
 	stdlib_kinds.o
 stdlib_stats_mean.o: \
 	stdlib_optval.o \
@@ -82,19 +84,3 @@ stdlib_stats_var.o: \
 	stdlib_optval.o \
 	stdlib_kinds.o \
 	stdlib_stats.o
-
-# Fortran sources that are built from fypp templates
-stdlib_bitsets_64.f90: stdlib_bitsets_64.fypp
-stdlib_bitsets_large.f90: stdlib_bitsets_large.fypp
-stdlib_bitsets.f90: stdlib_bitsets.fypp
-stdlib_io.f90: stdlib_io.fypp
-stdlib_linalg.f90: stdlib_linalg.fypp
-stdlib_linalg_diag.f90: stdlib_linalg_diag.fypp
-stdlib_quadrature.f90: stdlib_quadrature.fypp
-stdlib_stats.f90: stdlib_stats.fypp
-stdlib_stats_mean.f90: stdlib_stats_mean.fypp
-stdlib_stats_moment.f90: stdlib_stats_moment.fypp
-stdlib_stats_moment_all.f90: stdlib_stats_moment_all.fypp
-stdlib_stats_moment_mask.f90: stdlib_stats_moment_mask.fypp
-stdlib_stats_moment_scalar.f90: stdlib_stats_moment_scalar.fypp
-stdlib_stats_var.f90: stdlib_stats_var.fypp
