Add dependency from stdlib_linalg to stdlib_kinds

--- a/src/Makefile.manual
+++ b/src/Makefile.manual
@@ -54,6 +54,8 @@ stdlib_io.o: \
 	stdlib_error.o \
 	stdlib_optval.o \
 	stdlib_kinds.o
+stdlib_linalg.o: \
+	stdlib_kinds.o
 stdlib_linalg_diag.o: \
 	stdlib_linalg.o \
 	stdlib_kinds.o
