--- a/src/Makefile.manual
+++ b/src/Makefile.manual
@@ -47,7 +47,7 @@ clean:
 %.o: %.f90
 	$(FC) $(FFLAGS) -c $<
 
-%.f90: %.fypp common.fypp
+$(SRCGEN): %.f90: %.fypp common.fypp
 	fypp $(FYPPFLAGS) $< $@
 
 # Fortran module dependencies
