Implement non-fancy functional string type
- support all intrinsic operators for character variables
  (llt, lgt, lle, lge, len, len_trim, trim, adjustl, adjustr,
  index, scan, verify, repeat, char, ichar, iachar)
- support derived type IO (formatted and unformatted)
- implement assignment from character values
- implement constructing string from character values

--- a/src/Makefile.manual
+++ b/src/Makefile.manual
@@ -25,6 +25,7 @@ SRC = f18estop.f90 \
       stdlib_error.f90 \
       stdlib_kinds.f90 \
       stdlib_logger.f90 \
+      stdlib_string_type.f90 \
       $(SRCGEN)
 
 LIB = libstdlib.a
