--- a/src/tests/Makefile.manual
+++ b/src/tests/Makefile.manual
@@ -8,6 +8,7 @@ all:
 	$(MAKE) -f Makefile.manual --directory=optval
 	$(MAKE) -f Makefile.manual --directory=quadrature
 	$(MAKE) -f Makefile.manual --directory=stats
+	$(MAKE) -f Makefile.manual --directory=string
 
 test:
 	$(MAKE) -f Makefile.manual --directory=ascii test
@@ -17,6 +18,7 @@ test:
 	$(MAKE) -f Makefile.manual --directory=optval test
 	$(MAKE) -f Makefile.manual --directory=quadrature test
 	$(MAKE) -f Makefile.manual --directory=stats test
+	$(MAKE) -f Makefile.manual --directory=string test
 
 clean:
 	$(MAKE) -f Makefile.manual --directory=ascii clean
@@ -25,3 +27,4 @@ clean:
 	$(MAKE) -f Makefile.manual --directory=logger clean
 	$(MAKE) -f Makefile.manual --directory=optval clean
 	$(MAKE) -f Makefile.manual --directory=stats clean
+	$(MAKE) -f Makefile.manual --directory=string clean
