--- a/src/Makefile.manual
+++ b/src/Makefile.manual
@@ -18,7 +18,8 @@ SRCFYPP =\
         stdlib_stats_moment_mask.fypp \
         stdlib_stats_moment_scalar.fypp \
         stdlib_stats_var.fypp \
-	stdlib_stats_distribution_PRNG.fypp
+	stdlib_stats_distribution_PRNG.fypp \
+	stdlib_stats_distribution_uniform.fypp
 
 SRC = f18estop.f90 \
       stdlib_ascii.f90 \
@@ -108,3 +109,7 @@ stdlib_stats_var.o: \
 stdlib_stats_distribution_PRNG.o: \
         stdlib_kinds.o \
 	stdlib_error.o
+stdlib_stats_distribution_uniform.0: \
+        stdlib_kinds.o \
+	stdlib_error.o \
+	stdlib_stats_distribution_PRNG.o
