changed stdlib_functions to stdlib_specialfunctions

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -41,8 +41,8 @@ set(SRC
     stdlib_kinds.f90
     stdlib_logger.f90
     stdlib_system.F90
-    stdlib_functions.f90
-    stdlib_functions_legendre.f90
+    stdlib_specialfunctions.f90
+    stdlib_specialfunctions_legendre.f90
     stdlib_quadrature_gauss.f90
     ${outFiles}
 )
