--- a/src/Makefile.manual
+++ b/src/Makefile.manual
@@ -4,8 +4,8 @@ SRC = f18estop.f90 \
       stdlib_bitsets_64.f90 \
       stdlib_bitsets_large.f90 \
       stdlib_error.f90 \
-      stdlib_functions.f90 \
-      stdlib_functions_legendre.f90 \
+      stdlib_specialfunctions.f90 \
+      stdlib_specialfunctions_legendre.f90 \
       stdlib_io.f90 \
       stdlib_kinds.f90 \
       stdlib_linalg.f90 \
@@ -53,8 +53,8 @@ stdlib_bitsets.o: stdlib_kinds.o
 stdlib_bitsets_64.o: stdlib_bitsets.o
 stdlib_bitsets_large.o: stdlib_bitsets.o
 stdlib_error.o: stdlib_optval.o
-stdlib_functions.o: stdlib_kinds.o
-stdlib_functions_legendre.o: stdlib_kinds.o
+stdlib_specialfunctions.o: stdlib_kinds.o
+stdlib_specialfunctions_legendre.o: stdlib_kinds.o
 stdlib_io.o: \
 	stdlib_error.o \
 	stdlib_optval.o \
