--- a/src/Makefile.manual
+++ b/src/Makefile.manual
@@ -18,6 +18,7 @@ SRCFYPP =\
         stdlib_stats_moment_mask.fypp \
         stdlib_stats_moment_scalar.fypp \
         stdlib_stats_var.fypp \
+		stdlib_math.fypp \
 	stdlib_stats_distribution_PRNG.fypp
 
 SRC = f18estop.f90 \
