addedunit test for clip function; added math subdirectory in CMakeLists.txt and Makefile.manual of tests directory

--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -16,6 +16,7 @@ add_subdirectory(stats)
 add_subdirectory(string)
 add_subdirectory(system)
 add_subdirectory(quadrature)
+add_subdirectory(math)
 
 ADDTEST(always_skip)
 set_tests_properties(always_skip PROPERTIES SKIP_RETURN_CODE 77)
