Implement strip and chomp as supplement to trim (#343)
- strip function to remove whitespace set as defined by stdlib_ascii
- chomp function to remove either trailing character sets or substrings

--- a/src/tests/string/CMakeLists.txt
+++ b/src/tests/string/CMakeLists.txt
@@ -3,4 +3,4 @@ ADDTEST(string_operator)
 ADDTEST(string_intrinsic)
 ADDTEST(string_derivedtype_io)
 ADDTEST(string_functions)
-
+ADDTEST(string_strip_chomp)
