added module dependency of stdlib_math on stdlib_kinds in src/Makefile.manual

--- a/src/Makefile.manual
+++ b/src/Makefile.manual
@@ -114,3 +114,4 @@ stdlib_stats_distribution_PRNG.o: \
 	stdlib_error.o
 stdlib_string_type.o: stdlib_ascii.o stdlib_kinds.o
 stdlib_strings.o: stdlib_ascii.o stdlib_string_type.o
+stdlib_math.o: stdlib_kinds.o
