shifted slice from stdlib_ascii to stdlib_strings and modified module dependencies accordingly

--- a/src/Makefile.manual
+++ b/src/Makefile.manual
@@ -56,9 +56,7 @@ $(SRCGEN): %.f90: %.fypp common.fypp
 
 # Fortran module dependencies
 f18estop.o: stdlib_error.o
-stdlib_ascii.o: \
-	stdlib_kinds.o \
-	stdlib_math.o
+stdlib_ascii.o: stdlib_kinds.o
 stdlib_bitsets.o: stdlib_kinds.o
 stdlib_bitsets_64.o: stdlib_bitsets.o
 stdlib_bitsets_large.o: stdlib_bitsets.o
@@ -114,6 +112,9 @@ stdlib_stats_var.o: \
 stdlib_stats_distribution_PRNG.o: \
         stdlib_kinds.o \
 	stdlib_error.o
-stdlib_string_type.o: stdlib_ascii.o stdlib_kinds.o
-stdlib_strings.o: stdlib_ascii.o stdlib_string_type.o
+stdlib_string_type.o: stdlib_ascii.o \
+	stdlib_kinds.o
+stdlib_strings.o: stdlib_ascii.o \
+	stdlib_string_type.o \
+	stdlib_math.o
 stdlib_math.o: stdlib_kinds.o
