Add linspace submodule to stdlib_stats

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -13,6 +13,7 @@ set(fppFiles
     stdlib_stats.fypp
     stdlib_stats_corr.fypp
     stdlib_stats_cov.fypp
+    stdlib_stats_linspace.fypp
     stdlib_stats_mean.fypp
     stdlib_stats_moment.fypp
     stdlib_stats_moment_all.fypp
