Refactor stdlib_stats_linspace -> stdlib_linalg_linspace; Split linspace into "default" and "n" function calls to avoid use of allocatable array

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,11 +9,11 @@ set(fppFiles
     stdlib_io.fypp
     stdlib_linalg.fypp
     stdlib_linalg_diag.fypp
+    stdlib_linalg_linspace.fypp
     stdlib_optval.fypp
     stdlib_stats.fypp
     stdlib_stats_corr.fypp
     stdlib_stats_cov.fypp
-    stdlib_stats_linspace.fypp
     stdlib_stats_mean.fypp
     stdlib_stats_moment.fypp
     stdlib_stats_moment_all.fypp
