Refactor linspace manual dependencies

--- a/src/Makefile.manual
+++ b/src/Makefile.manual
@@ -6,6 +6,7 @@ SRCFYPP =\
         stdlib_io.fypp \
         stdlib_linalg.fypp \
         stdlib_linalg_diag.fypp \
+		stdlib_linalg_linspace.fypp \
         stdlib_optval.fypp \
         stdlib_quadrature.fypp \
         stdlib_quadrature_trapz.fypp \
@@ -13,7 +14,6 @@ SRCFYPP =\
         stdlib_stats.fypp \
         stdlib_stats_corr.fypp \
         stdlib_stats_cov.fypp \
-		stdlib_stats_linspace.fypp \
         stdlib_stats_mean.fypp \
         stdlib_stats_moment.fypp \
         stdlib_stats_moment_all.fypp \
@@ -71,6 +71,9 @@ stdlib_linalg.o: \
 stdlib_linalg_diag.o: \
 	stdlib_linalg.o \
 	stdlib_kinds.o
+stdlib_linalg_linspace.o: \
+	stdlib_linalg.o \
+	stdlib_kinds.o 
 stdlib_logger.o: stdlib_ascii.o stdlib_optval.o
 stdlib_optval.o: stdlib_kinds.o
 stdlib_quadrature.o: stdlib_kinds.o
@@ -89,11 +92,6 @@ stdlib_stats_corr.o: \
 	stdlib_kinds.o \
 	stdlib_stats.o
 stdlib_stats_cov.o: \
-	stdlib_optval.o \
-	stdlib_kinds.o \
-	stdlib_stats.o
-stdlib_stats_linspace.o: \
-	stdlib_error.o \
 	stdlib_optval.o \
 	stdlib_kinds.o \
 	stdlib_stats.o
