--- a/src/Makefile.manual
+++ b/src/Makefile.manual
@@ -18,6 +18,7 @@ SRCFYPP =\
         stdlib_stats_corr.fypp \
         stdlib_stats_cov.fypp \
         stdlib_stats_mean.fypp \
+        stdlib_stats_median.fypp \
         stdlib_stats_moment.fypp \
         stdlib_stats_moment_all.fypp \
         stdlib_stats_moment_mask.fypp \
@@ -107,6 +108,11 @@ stdlib_stats_cov.o: \
 stdlib_stats_mean.o: \
 	stdlib_optval.o \
 	stdlib_kinds.o \
+	stdlib_stats.o
+stdlib_stats_median.o: \
+	stdlib_optval.o \
+	stdlib_kinds.o \
+	stdlib_sorting.o \
 	stdlib_stats.o
 stdlib_stats_moment.o: \
 	stdlib_optval.o \
