add Intel Fortran compiler options for Win
The format of compiler options for Win differs from that for Linux
Add corresponding options for Windows
Add IF command to branch according to  CMAKE_SYSTEM_NAME

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,11 +33,20 @@ if(CMAKE_Fortran_COMPILER_ID STREQUAL GNU)
     add_compile_options(-std=f2008ts)
   endif()
 elseif(CMAKE_Fortran_COMPILER_ID STREQUAL Intel)
-  add_compile_options(-warn declarations,general,usage,interfaces,unused)
-  if(CMAKE_Fortran_COMPILER_VERSION VERSION_LESS 18.0)
-    add_compile_options(-stand f15)
-  else()
-    add_compile_options(-stand f18)
+  if(CMAKE_SYSTEM_NAME STREQUAL "Windows")
+    add_compile_options(/warn:declarations,general,usage,interfaces,unused)
+    if(CMAKE_Fortran_COMPILER_VERSION VERSION_LESS 18.0)
+      add_compile_options(/stand:f15)
+    else()
+      add_compile_options(/stand:f18)
+    endif()
+  else() # Linux or MacOS(Darwin)
+    add_compile_options(-warn declarations,general,usage,interfaces,unused)
+    if(CMAKE_Fortran_COMPILER_VERSION VERSION_LESS 18.0)
+      add_compile_options(-stand f15)
+    else()
+      add_compile_options(-stand f18)
+    endif()
   endif()
 elseif(CMAKE_Fortran_COMPILER_ID STREQUAL PGI)
   add_compile_options(-Mdclchk)
