--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,7 +33,7 @@ if(CMAKE_Fortran_COMPILER_ID STREQUAL GNU)
     add_compile_options(-std=f2008ts)
   endif()
 elseif(CMAKE_Fortran_COMPILER_ID STREQUAL Intel)
-  if(CMAKE_SYSTEM_NAME STREQUAL "Windows")
+  if(CMAKE_HOST_SYSTEM_NAME STREQUAL "Windows")
     add_compile_options(/warn:declarations,general,usage,interfaces,unused)
     if(CMAKE_Fortran_COMPILER_VERSION VERSION_LESS 18.0)
       add_compile_options(/stand:f15)
